# learning-projects

./: README.md
distributed-saga-coordinator/: README.md  go.mod
distributed-saga-coordinator/cmd/orchestrator/: main.go
distributed-saga-coordinator/config/: sagas.json
distributed-saga-coordinator/internal/saga/: coordinator.go  types.go
distributed-saga-coordinator/internal/transport/: http_server.go
temporal-knowledge-extractor/: README.md  pyproject.toml
temporal-knowledge-extractor/data/: sample-events.json
temporal-knowledge-extractor/src/temporal_knowledge_extractor/: __init__.py  cli.py  models.py  pipeline.py
vector-search-service/: Cargo.toml  README.md
vector-search-service/src/: engine.rs  main.rs  models.rs
