[package]
name = "vector-search-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
color-eyre = "0.6"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8", features = ["v4"] }
